add tags navigator

--- a/content/post/002.org
+++ b/content/post/002.org
@@ -1,6 +1,6 @@
 #+TITLE: 如何快速熟悉 ELisp 函数使用方式
 #+DATE: 2021-08-02T19:51:48+08:00
-#+TAGS[]: tips, elisp
+#+TAGS[]: tips elisp
 
 Emacs 的文档虽然比较全，但是缺少些可以拷贝粘贴的示例代码，这对于初学者来说有些不方便，不过幸好社区内有些解决方案，而且在 Emacs 28 中也对这方便有些增强。这里就来介绍其用法。
 
