--- a/content/post/2021-review.org
+++ b/content/post/2021-review.org
@@ -21,7 +21,7 @@ https://img.alicdn.com/imgextra/i3/581166664/O1CN01SDbLcu1z6A7Hdeh1g_!!581166664
 
 最快的时候当天录制，第二天就剪辑发布出来了。时长一小时的播客，制作时间一般需要 3-4 个小时，是个费事费力的事情。但是听播客就很快，我一般都是倍速听播客，而且一般听是在闲暇时间，所以更没有时间的概念。
 
-在制作了 9 期后，正好赶上双十一，工作上的事会多些，因此就打算方式放松一段时间，然后就一直到现在。这期间一直在创作使用技巧的文章，Emacs 就是这么神奇，即使在使用了 5 年后，还是能不时发现新的用法。
+在制作了 9 期后，正好赶上双十一，工作上的事会多些，因此就打算方式放松一段时间，然后就一直到现在。但这期间也没闲着，一直在创作使用技巧的文章，Emacs 就是这么神奇，即使在使用了 5 年后，还是能不时发现新的用法。
 ** 数据分析
 借助于百度、微信等平台，能大致看出 EmacsTalk 的听众的画像，觉得还比较有意思，这里和大家分享下。
 *** 最受欢迎的嘉宾
@@ -32,7 +32,7 @@ https://img.alicdn.com/imgextra/i3/581166664/O1CN01SDbLcu1z6A7Hdeh1g_!!581166664
 |    2 | 陈斌     | Kathy       | 领蜂   | 领蜂       |
 |    3 | tumashu  | stardiviner | Kathy  | 陈斌       |
 
-恭喜上述 TOP3 的嘉宾，但数据并不能代表一切，其他嘉宾的内容同样“湿货”满满，这里着重感谢所有嘉宾的鼎力支持。❤️️
+恭喜上述 TOP3 的嘉宾，但数据并不能代表一切，受多种因素的影响（早期的嘉宾明显占劣势），其他嘉宾的内容同样“湿货”满满，这里着重感谢所有嘉宾的鼎力支持。❤️️
 #+CAPTION: 小宇宙信息统计
 https://img.alicdn.com/imgextra/i1/581166664/O1CN01xAP4JM1z6A79huitw_!!581166664.jpg
 *** 听众区域分布
