--- a/content/post/2021-review.org
+++ b/content/post/2021-review.org
@@ -26,11 +26,11 @@ https://img.alicdn.com/imgextra/i3/581166664/O1CN01SDbLcu1z6A7Hdeh1g_!!581166664
 借助于百度、微信等平台，能大致看出 EmacsTalk 的听众的画像，觉得还比较有意思，这里和大家分享下。
 *** 最受欢迎的嘉宾
 #+ATTR_HTML: :border 1 :style text-align:center
-| 排名 | 百度统计 | Google 统计 | 小宇宙 | 微信公众号 |
-|------+----------+-------------+--------+------------|
-|    1 | 领蜂     | 陈斌        | 陈斌   | Kathy      |
-|    2 | 陈斌     | Kathy       | 领蜂   | 领蜂       |
-|    3 | tumashu  | stardiviner | Kathy  | 陈斌       |
+| 排名 | 百度统计 | Google 统计 | 小宇宙 | 微信公众号 | 喜马拉雅 |
+|------+----------+-------------+--------+------------+----------|
+|    1 | 领蜂     | 陈斌        | 陈斌   | Kathy      | tumashu  |
+|    2 | 陈斌     | Kathy       | 领蜂   | 领蜂       | 领蜂     |
+|    3 | tumashu  | stardiviner | Kathy  | 陈斌       | Kathy    |
 
 恭喜上述 TOP3 的嘉宾，但数据并不能代表一切，受多种因素的影响（早期的嘉宾明显占劣势），其他嘉宾的内容同样“湿货”满满，这里着重感谢所有嘉宾的鼎力支持。❤️️
 #+CAPTION: 小宇宙信息统计
